css(fix): css fix contrast of scroll-behaviour

--- a/live-examples/css-examples/cssom-view/scroll-behavior.css
+++ b/live-examples/css-examples/cssom-view/scroll-behavior.css
@@ -3,6 +3,10 @@
     flex-direction: column;
 }
 
+.nav a {
+    color: #009e5f;
+}
+
 scroll-container {
     border: 1px solid black;
     display: block;
